# zap_game

./: .clang-format  .clang-format_ignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  zap_game.sublime-project
src/: game.c  game.h  linalg.h  renderer.c  renderer.h  stdafx.h
src/targets/: main.c
